# dive-api

./: .env  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: down.sql
migrations/2024-01-29-104620_create_users/: up.sql
migrations/2024-02-02-215445_add_level/: down.sql  up.sql
migrations/2024-02-02-222431_add_ability/: down.sql  up.sql
migrations/2024-02-02-224441_add_admin/: down.sql  up.sql
src/: error.rs  lib.rs  schema.rs
src/modules/: mod.rs
src/modules/core/: fixtures.rs  mod.rs
src/modules/users/: mod.rs
src/modules/users/fixtures/: level.rs  mod.rs  user.rs
src/modules/users/models/: level.rs  user.rs  user_level.rs
src/modules/users/repositories/: level.rs  mod.rs  user.rs
src/modules/users/services/: level.rs  user.rs
src/modules/users/tests/: level.rs  mod.rs  user.rs
src/modules/users/tests/snapshots/: dive_api__modules__users__tests__level____test_context_wrapped_get_level-2.snap  dive_api__modules__users__tests__level____test_context_wrapped_get_level.snap  dive_api__modules__users__tests__level____test_context_wrapped_list_all_level.snap  dive_api__modules__users__tests__user____test_context_wrapped_get_user-2.snap  dive_api__modules__users__tests__user____test_context_wrapped_get_user.snap  dive_api__modules__users__tests__user____test_context_wrapped_list_all_user.snap
