[package]
name = "dive-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenvy = "0.15"
thiserror = "1.0.56"
r2d2 = "0.8.10"
serde = { version = "1.0.196", features = ["derive"] }

[dev-dependencies]
test-context = "0.1.4"
insta = { version = "1.34.0", features = ["json", "redactions"] }
cargo-insta = "1.34.0"
